--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 
     <modules>
         <module>gateway</module>
+        <module>confluent-gateway-for-cloud</module>
     </modules>
 
     <build>
