removing common-docker and cp-base-java dependency for cpc-gateway docker image

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <parent>
         <groupId>io.confluent</groupId>
-        <artifactId>common-docker</artifactId>
+        <artifactId>common</artifactId>
         <version>[8.2.0-0, 8.2.1-0)</version>
     </parent>
 
@@ -37,6 +37,40 @@
         <module>confluent-gateway-for-cloud</module>
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>utility-belt</artifactId>
+                <version>8.1.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jolokia</groupId>
+                <artifactId>jolokia-jvm</artifactId>
+                <version>${jolokia-jvm.version}</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>io.prometheus.jmx</groupId>
+                <artifactId>jmx_prometheus_javaagent</artifactId>
+                <version>${jmx_prometheus_javaagent.version}</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>disk-usage-agent</artifactId>
+                <version>${io.confluent.common.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
@@ -44,9 +78,11 @@
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <configuration>
                     <buildArgs>
-                        <UBI_MINIMAL_VERSION>${docker.build.ubi9.minimal.version}</UBI_MINIMAL_VERSION>
+                        <UBI_MINIMAL_VERSION>${ubi9-minimal.image.version}</UBI_MINIMAL_VERSION>
                         <ARCH>${docker.build.arch}</ARCH>
                         <GATEWAY_VERSION>${docker.build.gateway.version}</GATEWAY_VERSION>
+                        <GOLANG_VERSION>${golang.image.version}</GOLANG_VERSION>
+                        <TEMURIN_JDK_VERSION>-${ubi9-minimal.temurin-21-jdk.version}</TEMURIN_JDK_VERSION>
                     </buildArgs>
                 </configuration>
             </plugin>
@@ -58,9 +94,11 @@
                         <image>
                             <build>
                                 <args>
-                                    <UBI_MINIMAL_VERSION>${docker.build.ubi9.minimal.version}</UBI_MINIMAL_VERSION>
+                                    <UBI_MINIMAL_VERSION>${ubi9-minimal.image.version}</UBI_MINIMAL_VERSION>
                                     <ARCH>${docker.build.arch}</ARCH>
                                     <GATEWAY_VERSION>${docker.build.gateway.version}</GATEWAY_VERSION>
+                                    <GOLANG_VERSION>${golang.image.version}</GOLANG_VERSION>
+                                    <TEMURIN_JDK_VERSION>-${ubi9-minimal.temurin-21-jdk.version}</TEMURIN_JDK_VERSION>
                                 </args>
                             </build>
                         </image>
@@ -78,8 +116,12 @@
          and the input will come in mvn command from semaphore.yml file -->
         <docker.file>Dockerfile.ubi9</docker.file>
         
+        <!-- New properties for our custom Dockerfile -->
+        <ubi9-minimal.image.version>9.4-1194</ubi9-minimal.image.version>
+        <ubi9-minimal.temurin-21-jdk.version>21.0.8.0.0.9-1</ubi9-minimal.temurin-21-jdk.version>
+        <golang.image.version>1.24</golang.image.version>
+        
         <!-- Shared Docker build arguments -->
-        <docker.build.ubi9.minimal.version>${ubi9.minimal.image.version}</docker.build.ubi9.minimal.version>
         <docker.build.arch>${arch.type}</docker.build.arch>
         <docker.build.gateway.version>${GATEWAY_VERSION}</docker.build.gateway.version>
     </properties>
