--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,8 @@
                 <configuration>
                     <buildArgs>
                         <UBI_MINIMAL_VERSION>${ubi9-minimal.image.version}</UBI_MINIMAL_VERSION>
-                        <ARCH>${docker.build.arch}</ARCH>
-                        <GATEWAY_VERSION>${docker.build.gateway.version}</GATEWAY_VERSION>
+                        <ARCH>${arch.type}</ARCH>
+                        <GATEWAY_VERSION>${GATEWAY_VERSION}</GATEWAY_VERSION>
                         <GOLANG_VERSION>${golang.image.version}</GOLANG_VERSION>
                         <TEMURIN_JDK_VERSION>-${ubi9-minimal.temurin-21-jdk.version}</TEMURIN_JDK_VERSION>
                     </buildArgs>
@@ -95,8 +95,8 @@
                             <build>
                                 <args>
                                     <UBI_MINIMAL_VERSION>${ubi9-minimal.image.version}</UBI_MINIMAL_VERSION>
-                                    <ARCH>${docker.build.arch}</ARCH>
-                                    <GATEWAY_VERSION>${docker.build.gateway.version}</GATEWAY_VERSION>
+                                    <ARCH>${arch.type}</ARCH>
+                                    <GATEWAY_VERSION>${GATEWAY_VERSION}</GATEWAY_VERSION>
                                     <GOLANG_VERSION>${golang.image.version}</GOLANG_VERSION>
                                     <TEMURIN_JDK_VERSION>-${ubi9-minimal.temurin-21-jdk.version}</TEMURIN_JDK_VERSION>
                                 </args>
@@ -120,9 +120,6 @@
         <ubi9-minimal.image.version>9.4-1194</ubi9-minimal.image.version>
         <ubi9-minimal.temurin-21-jdk.version>21.0.8.0.0.9-1</ubi9-minimal.temurin-21-jdk.version>
         <golang.image.version>1.24</golang.image.version>
-        
-        <!-- Shared Docker build arguments -->
-        <docker.build.arch>${arch.type}</docker.build.arch>
-        <docker.build.gateway.version>${GATEWAY_VERSION}</docker.build.gateway.version>
+
     </properties>
 </project>
