--- a/gateway/Dockerfile.ubi9
+++ b/gateway/Dockerfile.ubi9
@@ -11,14 +11,24 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ARG DOCKER_UPSTREAM_REGISTRY
-ARG DOCKER_UPSTREAM_TAG=ubi9-latest
+ARG GOLANG_VERSION
+ARG UBI_MINIMAL_VERSION
+FROM docker.io/golang:${GOLANG_VERSION} AS build-utilities
 
-FROM ${DOCKER_UPSTREAM_REGISTRY}confluentinc/cp-base-java:${DOCKER_UPSTREAM_TAG}
+ENV GO_BIN="/go/bin"
+RUN go install github.com/confluentinc/cp-docker-utils/cmd/ub@master
+
+
+FROM registry.access.redhat.com/ubi9-minimal:${UBI_MINIMAL_VERSION}
 
 ARG PROJECT_VERSION
 ARG ARTIFACT_ID
 ARG GIT_COMMIT
+ARG BUILD_NUMBER=-1
+ARG TEMURIN_JDK_VERSION
+ARG GATEWAY_VERSION
+ARG CONFLUENT_PACKAGES_REPO
+ARG CONFLUENT_PLATFORM_LABEL
 
 LABEL maintainer="partner-support@confluent.io"
 LABEL vendor="Confluent"
@@ -29,21 +39,36 @@ LABEL summary="Confluent Gateway is Kafka-Protocol aware gateway that enables go
 LABEL description="Confluent Gateway is Kafka-Protocol aware gateway that enables governance and security for Apache Kafka clusters."
 LABEL io.confluent.docker=true
 LABEL io.confluent.docker.git.id=$GIT_COMMIT
-ARG BUILD_NUMBER=-1
 LABEL io.confluent.docker.build.number=$BUILD_NUMBER
 LABEL io.confluent.docker.git.repo="confluentinc/gateway-images"
 
+ENV LANG="C.UTF-8"
 ENV COMPONENT=gateway
 ENV COMPONENT_CONFIG_DIR=/etc/confluent-${COMPONENT}
 
-ARG GATEWAY_VERSION
-ARG CONFLUENT_PACKAGES_REPO
-ARG CONFLUENT_PLATFORM_LABEL
-
 USER root
 
+RUN printf "[temurin-jre] \n\
+name=temurin-jre \n\
+baseurl=https://adoptium.jfrog.io/artifactory/rpm/rhel/\$releasever/\$basearch \n\
+enabled=1 \n\
+gpgcheck=1 \n\
+gpgkey=https://adoptium.jfrog.io/artifactory/api/gpg/key/public \n\
+" > /etc/yum.repos.d/adoptium.repo \
+    && echo "===> Installing Temurin JRE..." \
+    && microdnf install -y temurin-21-jre${TEMURIN_JDK_VERSION} \
+    && microdnf clean all \
+    && echo "===> Creating appuser and directories..." \
+    && useradd --no-log-init --create-home --shell /bin/bash appuser \
+    && mkdir -p /etc/confluent/docker /usr/logs \
+    && chown appuser:appuser -R /etc/confluent/ /usr/logs \
+    && mkdir /licenses \
+    && rm /etc/yum.repos.d/adoptium.repo
+
+COPY --from=build-utilities /go/bin/ub /usr/bin/ub
+
+
 RUN echo "===> Installing ${COMPONENT}..." \
-    && echo "===> Adding confluent repository...${CONFLUENT_PACKAGES_REPO}" \
     && rpm --import ${CONFLUENT_PACKAGES_REPO}/archive.key \
     && printf "[Confluent] \n\
 name=Confluent repository \n\
@@ -52,7 +77,7 @@ gpgcheck=1 \n\
 gpgkey=${CONFLUENT_PACKAGES_REPO}/archive.key \n\
 enabled=1 " > /etc/yum.repos.d/confluent.repo \
     && microdnf install -y confluent-${COMPONENT}-${GATEWAY_VERSION} \
-    && echo "===> clean up ..."  \
+    && echo "===> Cleaning up ..." \
     && microdnf clean all \
     && rm -rf /tmp/* /etc/yum.repos.d/confluent.repo \
     && echo "===> Setting up ${COMPONENT} dirs" \
@@ -63,9 +88,18 @@ enabled=1 " > /etc/yum.repos.d/confluent.repo \
 
 VOLUME ["/var/lib/${COMPONENT}/data", "/etc/${COMPONENT}/secrets"]
 
-COPY --chown=appuser:appuser include/etc/confluent/docker /etc/confluent/docker
+# Copy files from target package to cp-base-new directory for backward compatibility (some paths are hardcoded in CFK startups scripts)
+COPY --chown=appuser:appuser target/${ARTIFACT_ID}-${PROJECT_VERSION}-package/share/doc/* /usr/share/doc/cp-base-new/
+COPY --chown=appuser:appuser target/${ARTIFACT_ID}-${PROJECT_VERSION}-package/share/java/${ARTIFACT_ID}/* /usr/share/java/cp-base-new/
 
-# make executable
+# /usr/share/java/cp-base-java is the default java classpath for ub
+# jars in cp-base-new and cp-base-java are identical, so create a symlink to avoid duplicating files
+RUN ln -s /usr/share/java/cp-base-new /usr/share/java/cp-base-java
+
+
+COPY --chown=appuser:appuser include/etc/confluent/docker /etc/confluent/docker
+COPY license.txt /licenses/
+
 RUN chmod +x /etc/confluent/docker/run
 RUN chmod +x /etc/confluent/docker/configure
 
