--- a/gateway/Dockerfile.ubi9
+++ b/gateway/Dockerfile.ubi9
@@ -15,8 +15,10 @@ ARG GOLANG_VERSION
 ARG UBI_MINIMAL_VERSION
 FROM docker.io/golang:${GOLANG_VERSION} AS build-utilities
 
+ARG CP_DOCKER_UTILS_VERSION
+
 ENV GO_BIN="/go/bin"
-RUN go install github.com/confluentinc/cp-docker-utils/cmd/ub@master
+RUN CGO_ENABLED=0 go install -ldflags="-w -s" github.com/confluentinc/cp-docker-utils/cmd/ub@${CP_DOCKER_UTILS_VERSION}
 
 
 FROM registry.access.redhat.com/ubi9-minimal:${UBI_MINIMAL_VERSION}
