--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>io.confluent</groupId>
         <artifactId>common</artifactId>
-        <version>[8.1.0-0, 8.1.1-0)</version>
+        <version>[8.1.2-0, 8.1.3-0)</version>
     </parent>
 
     <groupId>io.confluent.gateway-images</groupId>
@@ -42,7 +42,7 @@
             <dependency>
                 <groupId>io.confluent</groupId>
                 <artifactId>utility-belt</artifactId>
-                <version>8.1.0</version>
+                <version>${confluent.version.range}</version>
             </dependency>
 
             <dependency>
