--- a/examples/simple-passthrough-to-confluent-cloud/gateway.yaml
+++ b/examples/simple-passthrough-to-confluent-cloud/gateway.yaml
@@ -10,16 +10,12 @@ gateway:
         nodeIdRanges:
           - name: cc-brokers
             start: 0
-            end: 11
+            end: 30
         bootstrapServers:
           - id: cc-bootstrap
-            endpoint: "pkc-12576z.us-west2.gcp.confluent.cloud:9092"  # Replace with your CC bootstrap server
+            endpoint: "pkc-n98pk.us-west-2.aws.confluent.cloud:9092"  # Replace with your CC bootstrap server
             ssl:
-              truststore:
-                type: PKCS12
-                location: /etc/gateway/ssl/pkc-12576z.us-west2.gcp.confluent.cloud/truststore.p12
-                password:
-                  file: /etc/gateway/ssl/pkc-12576z.us-west2.gcp.confluent.cloud/truststore.password
+              truststore: # Confluent Cloud cert is present in Public CAs, so default truststore works
   routes:
     - name: cc-passthrough-route
       endpoint: "localhost:19092"
